--- a/assets/css/snack.css
+++ b/assets/css/snack.css
@@ -10,6 +10,18 @@ header {
   background-color: #f2f2f2;
   text-align: center;
   padding: 50px;
+  display: flex;
+  align-items: center;
+}
+
+header img {
+  margin-right: 10px;
+  width: 100%;
+  max-width: 200px;
+}
+
+.titulo {
+  flex: 1;
 }
 
 h1 {
@@ -27,22 +39,7 @@ h2 {
   font-size: 24px;
 }
 
-.promociones,
-.concursos {
-  text-align: center;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 
-.promocion,
-.concurso {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
-}
 
 .promocion img,
 .concurso img {
