--- a/assets/css/snack.css
+++ b/assets/css/snack.css
@@ -14,6 +14,21 @@ header {
   align-items: center;
 }
 
+header a {
+  display: inline-block;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 4px;
+  font-size: 18px;
+}
+
+header a:hover {
+  background-color: #555;
+  cursor: pointer;
+}
+
 header img {
   margin-right: 10px;
   width: 100%;
@@ -38,8 +53,6 @@ h2 {
   color: #333;
   font-size: 24px;
 }
-
-
 
 .promocion img,
 .concurso img {
