--- a/assets/css/registroSnack.css
+++ b/assets/css/registroSnack.css
@@ -10,8 +10,6 @@ header {
   background-color: #f2f2f2;
   text-align: center;
   padding: 50px;
-  display: flex;
-  align-items: center;
 }
 
 header img {
@@ -21,7 +19,7 @@ header img {
 }
 
 .titulo {
-  flex: 1;
+  margin-top: 20px;
 }
 
 h1 {
@@ -42,6 +40,23 @@ h2 {
 
 form {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+input[type="text"],
+input[type="email"] {
+  width: 100%;
+  max-width: 300px;
+  padding: 8px;
+  margin-bottom: 10px;
 }
 
 /* Estilos del botón de enviar */
@@ -104,3 +119,53 @@ footer {
   text-align: center;
   padding: 20px;
 }
+
+/* Estilos responsive */
+@media screen and (max-width: 600px) {
+  header {
+    padding: 20px;
+  }
+
+  header img {
+    max-width: 150px;
+  }
+
+  .titulo {
+    margin-top: 10px;
+  }
+
+  h1 {
+    font-size: 24px;
+  }
+
+  section {
+    padding: 20px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  form {
+    margin-bottom: 10px;
+  }
+
+  .btn,
+  .btn-volver {
+    font-size: 16px;
+    padding: 8px 16px;
+  }
+
+  .registro-info h3 {
+    font-size: 16px;
+  }
+
+  .registro-info p {
+    font-size: 14px;
+  }
+
+  footer {
+    font-size: 14px;
+  }
+}
+
