--- a/assets/css/snack.css
+++ b/assets/css/snack.css
@@ -11,6 +11,7 @@ header {
   text-align: center;
   padding: 50px;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -36,12 +37,13 @@ header img {
 }
 
 .titulo {
-  flex: 1;
+  margin-top: 20px;
 }
 
 h1 {
   color: #333;
   font-size: 36px;
+  margin-bottom: 10px;
 }
 
 section {
@@ -52,6 +54,7 @@ section {
 h2 {
   color: #333;
   font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .promocion img,
@@ -174,13 +177,48 @@ footer {
   color: #fff;
   text-align: center;
   padding: 20px;
+  margin-top: 50px;
 }
 
 @media screen and (max-width: 768px) {
-  .promocion,
-  .concurso {
-    flex-basis: 100%;
+  header {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  header img {
+    margin-bottom: 20px;
+    max-width: 100%;
+  }
+
+  .titulo {
+    margin-top: 0;
   }
 }
+
+@media screen and (max-width: 576px) {
+  section {
+    padding: 30px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+
+  .promocion img,
+  .concurso img {
+    max-width: 100%;
+  }
+
+  .promocion p,
+  .concurso p {
+    font-size: 14px;
+  }
+}
+
 
 
