--- a/A_RECICLAR/css/estilo.css
+++ b/A_RECICLAR/css/estilo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=K2D');
+@import url("https://fonts.googleapis.com/css?family=K2D");
 @import url(menu.css);
 @import url(banner.css);
 @import url(capturas.css);
@@ -10,134 +10,140 @@
 @import url(descripcion.css);
 @import url(leer.css);
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-	font-family: 'K2D', sans-serif;
+body {
+  font-family: "K2D", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
 }
 
-header{
-	width:100%;
-	height: 50px;
-	background: #333;
-	color: #fff;
-	
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 100;
+header {
+  width: 100%;
+  height: 50px;
+  background: #333;
+  color: #fff;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
 }
 
-.contenedor{
-	width: 98%;
-	margin: auto;
-    
+.contenedor-header {
+  width: 98%;
+  margin: auto;
 }
 
-h1{
-	float: left;
-    margin: center;
+header .contenedor {
+  display: table;
 }
 
-header .contenedor{
-	display: table;
+.contenedor {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-section{
-	width: 100%;
-	margin-bottom: 25px;
+h1 {
+  float: left;
+  margin: center;
+}
+
+section {
+  width: 100%;
+  margin-bottom: 25px;
 }
 
 #bienvenidos {
-	text-align: center;
-    background: #333;
-    color: #fff;
+  text-align: center;
+  background: #333;
+  color: #fff;
 }
 
 footer .contenedor {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-    color:antiquewhite;
-	padding-bottom: 25px;
-    background: rgba(51,51,51,1);
-    width: 100%;
+  display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: antiquewhite;
+  padding-bottom: 25px;
+  background: rgba(51, 51, 51, 1);
+  width: 100%;
 }
 
 .copy {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 .sociales {
-	width: 100%;
-	text-align: center;
-	font-size: 28px;
-    margin-top: 20px;
+  width: 100%;
+  text-align: center;
+  font-size: 28px;
+  margin-top: 20px;
 }
 
-.sociales a{
-	color: antiquewhite;
-	text-decoration: none;
+.sociales a {
+  color: antiquewhite;
+  text-decoration: none;
 }
 
-@media (min-width:768px){
-	.sociales{
-		width: auto;
-	}
-	
-   footer .contenedor{
-	   justify-content: space-between;
-   }
+@media (min-width: 768px) {
+  .sociales {
+    width: auto;
+  }
+
+  footer .contenedor {
+    justify-content: space-between;
+  }
 }
 
 .info {
-	width: 450px;
-	margin: auto;
-	background: rgba(0,0,0,0.4);
-	padding: 10px 20px;
-	box-sizing: border-box;
-	margin-top: 80px;
-	border-radius: 7px;
+  width: 450px;
+  margin: auto;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px 20px;
+  box-sizing: border-box;
+  margin-top: 80px;
+  border-radius: 7px;
 }
 
-@media (max-width:1064px){
-	#titulo{
-		width: 90%;
-        font-size: 25px;
-        
-	}
-h1{
-        float: left;
-        margin-left: 180px;
-        height: 50px;
-        padding: 10px;
-        max-width: 73%;
-        margin-top: -10px;
-    
-    }
+@media (max-width: 1064px) {
+  #titulo {
+    width: 90%;
+    font-size: 25px;
+  }
+  h1 {
+    float: left;
+    margin-left: 180px;
+    height: 50px;
+    padding: 10px;
+    max-width: 73%;
+    margin-top: -10px;
+  }
 }
 
-@media (max-width:768px){
-	#titulo{
-		width: 90%;
-        font-size: 18px;
-        
-	}
-h1{
-        float: left;
-        margin-left: 50px;
-        height: 50px;
-        padding: 10px;
-        max-width: 61%;
-        margin-top: -10px;
-        text-align: center;
-    }
+@media (max-width: 768px) {
+  #titulo {
+    width: 90%;
+    font-size: 18px;
+  }
+  h1 {
+    float: left;
+    margin-left: 50px;
+    height: 50px;
+    padding: 10px;
+    max-width: 61%;
+    margin-top: -10px;
+    text-align: center;
+  }
 }
 
-.menu__link--select{
-    background: rgba(255,255,255,0.3);
+.menu__link--select {
+  background: rgba(255, 255, 255, 0.3);
 }
-
