--- a/A_RECICLAR/css/alcance.css
+++ b/A_RECICLAR/css/alcance.css
@@ -1,57 +1,149 @@
 #alcance {
-	margin: auto;
-	text-align: justify;
-	margin-top: 80px;
-	
+  margin: auto;
+  text-align: justify;
+  margin-top: 80px;
 }
 
-.Artículos{
-    width: 80%;
-    margin: auto;
+.Artículos {
+  width: 80%;
+  margin: auto;
 }
 
-#alcance img{
-    width: 100%;
-    max-width: 280px;
-    height: 300px;
+#alcance img {
+  width: 100%;
+  max-width: 280px;
+  height: 300px;
 }
 
 #vid {
-	margin-top: 40px;
-    align-items: flex-start;
-    width: 80%;
-    margin: auto;
+  margin-top: 40px;
+  align-items: flex-start;
+  width: 80%;
+  margin: auto;
 }
 
-#vid .contenedor{
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+#vid .contenedor {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-#vid article{
-	margin: 15px;
+#vid article {
+  max-width: 500px;
 }
 
-#vid media{
-	width: 100%;
-    max-width: 280px;
-    height: 300px;
+#vid media {
+  width: 100%;
+  max-width: 280px;
+  height: 300px;
 }
 
-#vid media{
-    height: 100px;
+#vid media {
+  height: 100px;
 }
 
-#vid h3{
-    text-align: center;
+#vid h3 {
+  text-align: center;
 }
 
-#vid img{
-    width: 80%;
-    margin: auto;
+#vid img {
+  width: 80%;
+  margin: auto;
 }
 
-#sof{
-    margin-top: 20px;
+#sof {
+  margin-top: 20px;
+}
+
+p {
+  font-size: 1.2em;
+}
+
+li {
+  font-size: 1.2em;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  background-color: black;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
