--- a/A_RECICLAR/css/estilo.css
+++ b/A_RECICLAR/css/estilo.css
@@ -50,6 +50,7 @@ header .contenedor {
   padding: 20px;
 }
 
+
 h1 {
   float: left;
   margin: center;
@@ -115,34 +116,41 @@ footer .contenedor {
 
 @media (max-width: 1064px) {
   #titulo {
-    width: 90%;
-    font-size: 25px;
+    width: 30%;
   }
   h1 {
     float: left;
-    margin-left: 180px;
-    height: 50px;
-    padding: 10px;
-    max-width: 73%;
-    margin-top: -10px;
+    margin-left: 0px;
+    margin-top: -3px;
+    text-align: center;
   }
+  
 }
 
 @media (max-width: 768px) {
   #titulo {
-    width: 90%;
-    font-size: 18px;
+    width: 30%;
   }
   h1 {
     float: left;
-    margin-left: 50px;
-    height: 50px;
-    padding: 10px;
-    max-width: 61%;
-    margin-top: -10px;
+    margin-left: 0px;
+    margin-top: -3px;
     text-align: center;
   }
+  #banner img.banner__img {
+    width: 90%; /* Ajustar el ancho de la imagen al 100% */
+    height: 100%; /* Ajustar la altura de la imagen al 100% */
+  }
+  #banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+  
 }
+
 
 .menu__link--select {
   background: rgba(255, 255, 255, 0.3);
