--- a/A_RECICLAR/css/Acerca.css
+++ b/A_RECICLAR/css/Acerca.css
@@ -1,80 +1,120 @@
-﻿#acerca{
-    text-align: center;
-    margin-top: 68px;
-    background: #DE423A;
-    color: #fff;
+﻿#acerca {
+  text-align: center;
+  margin-top: 68px;
+  background: #de423a;
+  color: #fff;
 }
 
-.our-team{
-    text-align: center;
-    margin-bottom: 20px;
-    
-}
-.our-team .container__flex{
-    align-items: flex-start;
-}
-.our-team__title{
-    color:#000000;
-    font-weight: bold;
-    font-size: 1.8em;
-    margin-bottom: 10px;
-    margin-top: 30px;
-    background: rgba(51,51,51,0.3);
-}
-.group__title{
-    background: #000;
-    color: #fff;
+.our-team {
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-
-.our-team__img{
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin: auto;
-    margin-bottom: 20px;
+.our-team .container__flex {
+  align-items: flex-start;
 }
 
-.our-team__img img{
-    height: 100px;
+.our-team__title {
+  color: #000000;
+  font-weight: bold;
+  font-size: 1.8em;
+  margin-bottom: 10px;
+  margin-top: 30px;
+  background: rgba(51, 51, 51, 0.3);
 }
 
-
-
-.our-team__txt{
-    padding: 10px;
-    width: 50%;
-    margin: auto;
+.group__title {
+  background: #000;
+  color: #fff;
 }
 
-@media screen and (min-width:480px) {
-    .our-team__img {
-        width: 150px;
-        height: 150px;
-    }
+.our-team__img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: auto;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
 }
 
-@media screen and (min-width:768px) {
-    .our-team__img {
-        width: 220px;
-        height: 220px;
-    }
+.our-team__img img {
+  width: 100%;
+  height: 100%;
+  transition: transform 0.3s ease;
 }
 
-@media screen and (min-width:1024px) {
-    .our-team__img {
-        width: 310px;
-        height: 310px;
-    }
-    .our-team__title{
-        font-size: 2.1em;
-    }
+.our-team__img:hover img {
+  transform: scale(1.1);
 }
 
-@media screen and (min-width:1600px) {
-    .our-team__img {
-        width: 420px;
-        height: 420px;
-    }
+.our-team__img::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.our-team__img:hover::before {
+  opacity: 1;
+}
+
+.our-team__img::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.our-team__img:hover::after {
+  opacity: 1;
+}
+
+.our-team__txt {
+  padding: 10px;
+  width: 50%;
+  margin: auto;
+}
+
+@media screen and (min-width: 480px) {
+  .our-team__img {
+    width: 150px;
+    height: 150px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .our-team__img {
+    width: 220px;
+    height: 220px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .our-team__img {
+    width: 310px;
+    height: 310px;
+  }
+  .our-team__title {
+    font-size: 2.1em;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .our-team__img {
+    width: 420px;
+    height: 420px;
+  }
 }
