--- a/A_RECICLAR/css/estilo.css
+++ b/A_RECICLAR/css/estilo.css
@@ -19,8 +19,10 @@ body {
   font-family: "K2D", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f2f2f2;
+  background: linear-gradient(to bottom, #3bc904,  #ffffff,#69c236);
+  background-attachment: fixed;
 }
+
 
 header {
   width: 100%;
@@ -33,6 +35,47 @@ header {
   left: 0;
   z-index: 100;
 }
+
+#banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+#banner img.banner__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+
+
+.banner__boton {
+  position: absolute;
+  left: 50%;
+  bottom: -100%;
+  transform: translateX(-50%);
+  text-align: center;
+  width: 100%;
+}
+
+.boton {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #2e9704;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+}
+
+.boton:hover {
+  background-color: #ff6a33;
+}
+
 
 .contenedor-header {
   width: 98%;
