--- a/A_RECICLAR/css/leer.css
+++ b/A_RECICLAR/css/leer.css
@@ -4,15 +4,27 @@
 	margin-top: 80px;
 }
 
-#leer h3, p, li, h6{
-    margin-top: 20px;
+#leer h3, p, li, h6 {
+	margin-top: 20px;
 }
 
-#leer h3{
-    color:red;
+#leer h3 {
+	color: #ff4500; /* Cambiar el color rojo por uno más atractivo, en este caso, un tono de naranja */
+	font-weight: bold; 
 }
 
-@media(max-width:768px){
-    #leer img{ width: 105%;
-        }
+.Artículos .imagen img {
+    max-width: 50%;
+    height: auto;
+    display: block;
+    margin: 20px auto;
+    margin-bottom: 20px;
+  }
+  
+
+@media (max-width: 768px) {
+	.Artículos .imagen img {
+        max-width: 100%;
+		width: 105%;
+	}
 }
