--- a/A_RECICLAR/css/estilo.css
+++ b/A_RECICLAR/css/estilo.css
@@ -19,7 +19,7 @@ body {
   font-family: "K2D", sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom, #3bc904,  #ffffff,#69c236);
+  background: linear-gradient(to bottom, #ffffff,  #bcd1b3,#b7f892);
   background-attachment: fixed;
 }
 
